# evm-simulation

./: Cargo.toml
.github/workflows/: nextjs.yml  rust-checks.yaml  rust.yml
contracts/: foundry.toml
contracts/src/: Simulator.sol
src/: constants.rs  honeypot.rs  lib.rs  main.rs  simulator.rs  strategy.rs  tokens.rs  trace.rs  utils.rs
src/interfaces/: mod.rs  ownable.rs  simulator.rs  token.rs
