[package]
name = "evm-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
hex = "0.4.3"
dotenv = "0.15.0"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
futures = "0.3.5"
async-trait = "0.1.64"
anyhow = "1.0.70"
serde = "1.0.145"
serde_json = "1.0"
itertools = "0.11.0"

cfmms = "*"
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }
ethers = { version = "2.0", features = ["abigen", "ws"] }
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
eth-encode-packed = "0.1.0"

# foundry
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "8343e7d8ac08724238db1c014c325bba479ba587" }
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "8343e7d8ac08724238db1c014c325bba479ba587" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "8343e7d8ac08724238db1c014c325bba479ba587" }

# alloy
alloy-primitives = "0.5.0"

colored = "2.0.0"
log = "0.4.17"
indicatif = "0.17.5"
indoc = "2"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
csv = "1.2.2"

[patch.crates-io]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }

revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
revm-precompile = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
